--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,13 @@
     color: #000000;
     background-color: rgb(245, 245, 12);
 }
+.header {
+    color: #36A0FF;
+    font-size: 27px;
+    padding: 10px;
+}
+
+.bigicon {
+    font-size: 35px;
+    color: #36A0FF;
+}
