--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@
 #btnStart {
     color: #000000;
     background-color: rgb(245, 245, 12);
+    font-family: 'Oswald', sans-serif;
+
 }
 .header {
     color: #36A0FF;
@@ -25,3 +27,9 @@
     font-size: 35px;
     color: #36A0FF;
 }
+#Registrarse , #capturarImagen {
+    padding-top: 70px;
+    padding-bottom: 70px;
+    
+}
+
